@@ -1,10 +1,18 @@
 PRJ_VER=2.4.0
 SUMMARY=cmake-fedora-zanata
-REDHAT_BUGZILLA=
+REDHAT_BUGZILLA=1194797
 [Changes]
 - Enhancement:
   * cmake-fedora-pkgdb: New script: pkgdb helper script.
   * cmake-fedora-zanata: New script: zanata helper script.
-- Support zanata-server and zanata-client 3.7.
-- Add additional path to cmake-fedora.conf
-- ManageFile: New function: MANAGE_FILE_COMMON_DIR
+- Fixed:
+  * Resolves: RHBZ 1194797: find -printf is not portable
+- Changed:
+  * Support zanata-server and zanata-client 3.7.
+  * Add additional path to cmake-fedora.conf
+  * cmake-fedora.conf: Remove bodhi branch, 
+    use whatever cmake-fedora-pkgdb found. 
+  * ManageFile: New function: MANAGE_FILE_COMMON_DIR
+  * ManageString: Macro to function: STRING_UNQUOTE
+  * koji-build-scratch: Use fedpkg backend instead
+  * cmake-fedora-fedpkg: Fix 
